# world-models-jax

./: .gitignore  CITATION.cff  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  analyze_telemetry.py  collect_data.py  data_collection.py  data_collection_failures_parallel.py  data_collection_iterative_parallel.py  data_collection_random_parallel.py  data_collection_recovery_parallel.py  data_collection_smart.py  process_data.py  pyproject.toml  requirements.txt  run_test.py  run_vae_training.py  test_agent.py  train_controller.py  train_controller_fast.py  train_dream.py  train_rnn.py  train_vae.py
docs/: world-models.md
scripts/data_collection/: data_collection.py  data_collection_aggressive_parallel.py  data_collection_failures.py  data_collection_failures_serial.py  data_collection_heuristic.py  data_collection_heuristic_serial.py  data_collection_iterative.py  data_collection_iterative_parallel.py  data_collection_on_policy.py  data_collection_random.py  data_collection_random_brownian_serial.py  data_collection_random_serial.py  data_collection_recovery_serial.py  data_collection_smart.py
scripts/tools/: analyze_telemetry.py  check_gpu.py  debug_data.py  debug_pipeline.py  run_pipeline_test.py  visualize_episode.py
src/: controller.py  rnn.py  vae.py
