[project]
name = "world-models-jax"
version = "0.1.0"
description = "JAX implementation of World Models on CarRacing-v3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax",
    "jaxlib",
    "equinox",
    "optax",
    "gymnasium[box2d]",
    "cma",
    "opencv-python",
    "numpy",
    "tqdm",
    "matplotlib",
    "imageio",
    "ipykernel"
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
